sandbox-codebase/objects/heymarket__Sync_Object_Default_Field__c/heymarket__Sync_Object_Default_Field__c.object-meta.xml
<CustomObject>
    <label>Sync Object Default Field</label>
    <nameField>
        <displayFormat>SODF-{0000}</displayFormat>
        <label>Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Object Default Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>