sandbox-codebase/objects/heymarket__Sync_Object_Default_Field__c/fields/heymarket__Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Object__c</fullName>
    <label>Sync Object</label>
    <referenceTo>heymarket__Sync_Object__c</referenceTo>
    <relationshipLabel>Sync Object Default Fields</relationshipLabel>
    <relationshipName>Sync_Object_Default_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>