sandbox-codebase/objects/heymarket__Sync_Object_Default_Field__c/fields/heymarket__Value__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>